Standard build adjustments

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,23 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,900');
 
 /* General */
-html { margin:0; padding:0; }
-body {font-size:16px; margin:0; padding:0; }
+html { margin:0; padding:0; background:#a2e52c; }
+body {font-size:16px; margin:0; padding:0; background:#fff; min-height:100vh; }
 img { max-width:100%; }
 h1, h2, h3, h4, h5, h6 { font-family: 'Source Sans Pro', sans-serif; }
 p, li { max-width:75rem; }
-a { text-decoration:none; }
+a { text-decoration:none; color:#a2e52c; }
+::selection { background-color:#a2e52c; }
 
 /* Header */
-.site-header {}
-.logo { background:url('/assets/images/as-logo.svg') left center no-repeat; background-size: contain; text-indent:-100vw; display:block; width:11em; height:4.5em; margin: 0 0 1em; }
+.site-header { text-align:center; }
+.logo { background:url('/assets/images/as-logo.svg') left center no-repeat; background-size: contain; text-indent:-999vw; display:block; width:11em; height:4.5em; margin: 0 auto 1em; }
 
 /* Navigation */
-.main-menu { text-align:right; }
 .main-menu ul { margin:0; padding:0; }
   .main-menu ul li { list-style:none; display:inline-block; font-family:'Source Sans Pro', sans-serif; }
-  .main-menu ul li a { color:#333; padding:0.5em 1em; display:block; }
-  .main-menu ul li a:hover { color:#000; background:#eee; }
+  .main-menu ul li a { color:#333; padding:0.5em 1em; display:block; position:relative; }
+  .main-menu ul li a:hover { color:#333; background:#a2e52c; }
+  .main-menu ul li a.active::after { content:''; display:block; background:#a2e52c; height:0.2rem; width:100%; margin-top:0.25rem; }
 
 @media screen {
     /* General */
@@ -29,7 +30,7 @@ a { text-decoration:none; }
     /* Work */
       .work-grid { display:flex; flex-flow:row wrap; margin:0 -1rem; }
         .work-item { width:calc(50% - 1rem); margin:0 0.5rem 1rem; position:relative; overflow:hidden; }
-        .work-title { color:#f00; }
+        .work-title { color:#333; }
         .work-image { display:block; transition:transform 0.35s ease-in-out; }
           .work-item:hover .work-image { transform:scale(1.02); }
 
@@ -41,11 +42,12 @@ a { text-decoration:none; }
   .wrapper { padding:2rem; }
 
   /* Header */
-  .site-header { display:flex; }
+  .site-header { display:flex; text-align:left; }
   .logo-container { flex-grow:1; }
+    .logo { margin:0 0 1em; }
 
   /* Navigation */
-  .main-menu { flex-grow:5; }
+  .main-menu { flex-grow:5; text-align:right; }
 
   /* Home */
 
