--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -29,7 +29,9 @@ a { text-decoration:none; color:#a2e52c; }
 
     /* Home */
     .home-intro { font-family:'Source Sans Pro', sans-serif; font-size:2em; line-height:1.125em; font-weight:700; }
-
+      .home-intro a { text-decoration:none; position:relative; }
+      .home-intro a::after { content:''; display:block; position:absolute; left:0; right:0; height:1em; bottom:-0.5em; background-color:#a2e52c; }
+      
     /* Work */
     .work-filter { margin:0 0 2em; padding:0; }
       .work-filter li { display:inline-block; list-style:none; margin-right:1em; text-transform:uppercase; letter-spacing:2px; }
@@ -64,7 +66,6 @@ a { text-decoration:none; color:#a2e52c; }
   .work-title { font-weight:300; font-size:2.5em; position:absolute; top:50%; left:0; right:0; transform:translateY(-50%); text-align:center; margin:0; opacity:0; transition:opacity 0.35s ease-in-out; }
     .work-item:hover .work-title { opacity:1; }
     .work-item:hover .work-image { opacity:0.5; }
-
 
 }
 
