--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,900');
+@import url('https://fonts.googleapis.com/css?family=Eczar');
 
 /* General */
 html { margin:0; padding:0; background:#a2e52c; }
@@ -11,38 +12,54 @@ a { text-decoration:none; color:#a2e52c; }
 
 /* Header */
 .site-header { }
-.logo { background:url('/assets/images/as-logo.svg') left center no-repeat; background-size: contain; text-indent:-999vw; display:block; width:11em; height:4.5em; margin: 0 0 1em; }
+/*.logo { background:url('/assets/images/as-logo.svg') left center no-repeat; background-size: contain; text-indent:-999vw; display:block; width:11em; height:4.5em; margin: 0 0 1em; }*/
+.logo { font-size:1.25em; color:#000; font-weight:600; transition:all 0.35s ease-in-out; }
+.logo:hover { color:#a2e52c;  }
 .btn, .more { color:#333; border:1px solid #a2e52c; padding:0.5rem 0.75rem; }
 
 @media screen {
     /* General */
-    .wrapper { padding:1em; max-width:90em; margin:0 auto; overflow:hidden; }
+    .wrapper { padding:2em 1em; max-width:90em; margin:0 auto; overflow:hidden; }
     .page-title { font-size:3em; }
     .page-subtitle { color:#63802f; font-size:1.25rem; font-weight:300; }
     .price { margin-top:0.25rem; }
 
     /* Header */
-    .site-header { display:flex; justify-content: space-between; margin-bottom:1em; }
+    .site-header { display:flex; justify-content: space-between; align-items:center; margin-bottom:1em; }
 
     /* Navigation */
-    .nav-toggle { margin-top:1rem; }
+    .nav-toggle { }
       .nav-toggle span,
       .nav-toggle::before,
-      .nav-toggle::after { width:2rem; height:0.325rem; background:#333; content:''; display:block; text-indent:100vw; }
-      .nav-toggle span { margin:0.25rem 0; }
-    .main-menu { display:none; }
-    .main-menu ul { margin:0; padding:0; }
-      .main-menu ul li { list-style:none; display:inline-block; font-family:'Source Sans Pro', sans-serif; }
-      .main-menu ul li a { color:#333; padding:0.5em 1em; display:block; position:relative; }
-      .main-menu ul li a:hover { color:#333; background:#a2e52c; }
-      .main-menu ul li a.active::after { content:''; display:block; background:#a2e52c; height:0.2rem; width:100%; margin-top:0.25rem; }
+      .nav-toggle::after { width:1.75rem; height:0.25rem; background:#333; content:''; display:block; text-indent:100vw; }
+      .nav-toggle span { margin:0.25rem 0; transition:margin 0.05s ease-in-out; }
+      .nav-toggle:hover span { margin:0.325rem 0; }
 
-    .main-menu.active { background:#a2e52c; position:fixed; left:0; right:0; bottom:0; top:0; z-index: 100; text-align:center; display:block; }
+    .main-menu { display:none; }
+    .main-menu .nav-close { display:none; opacity:0; position:absolute; top:2em; right:1rem; width:1.75rem; height:1.75rem; }
+    .main-menu .nav-close:before, .main-menu .nav-close:after { position:absolute; left:0.75rem; content:' '; height:1.75rem; width:0.25rem; background-color:#fff; transform:rotate(0); transition:all 0.35s ease-in-out; }
+
+    .main-menu ul { margin:0; padding:0; }
+      .main-menu ul li { list-style:none; display:inline-block; font-family: 'Eczar', serif; letter-spacing:2px; font-size:1.125em; }
+      .main-menu ul li a { color:#333; padding:0.5em 1em; display:block; position:relative; }
+      .main-menu ul li a::after { content:''; display:block; background-color:transparent; height:0.2rem; width:100%; margin-top:0.25rem; }
+
+      .main-menu ul li a:hover { color:#bbb; }
+        .main-menu ul li a:hover::after  { background-color:#eee; }
+      .main-menu ul li a.active { color:#000; }
+        .main-menu ul li a.active::after { background-color:#a2e52c; }
+
+    .main-menu.active { background:#a2e52c; position:fixed; left:0; right:0; bottom:0; top:0; z-index: 100; text-align:center; display:block; padding:4em 2em 2em; }
+      .main-menu.active .nav-close { display:block; opacity:0.5; }
+        .main-menu.active .nav-close:hover { opacity:1; }
+        .main-menu.active .nav-close:before { transform:rotate(45deg); }
+        .main-menu.active .nav-close:after { transform:rotate(-45deg); }
+      .main-menu.active ul { position:absolute; top:50%; width:calc(100% - 4em); transform:translateY(-50%); }
       .main-menu.active ul li { display:block; font-size:2rem; }
       .main-menu.active ul li a { color:#fff; }
 
     /* Intro */
-    .page-intro { font-family:'Source Sans Pro', sans-serif; font-size:2em; line-height:1.125em; font-weight:700; }
+    .page-intro { font-family:'Source Sans Pro', sans-serif; font-size:2rem; line-height:1.125em; font-weight:700; margin-top:2rem; }
       .page-intro a { text-decoration:none; position:relative; color:#333; }
       .page-intro a::after { content:''; display:block; position:absolute; left:0; right:0; height:0.325rem; bottom:0; background-color:#a2e52c; }
       .page-intro a:hover { color:#a2e52c; }
@@ -69,7 +86,8 @@ a { text-decoration:none; color:#a2e52c; }
         .card-image img { display:block; transition:all 0.35s ease-in-out; }
 
     /* Footer */
-    .site-footer { clear:both; }
+    .site-footer { clear:both; text-align:center; }
+      .site-footer p { margin:0; }
     .social { margin-right:1em; text-decoration:underline; color:#333; }
     .social-instagram::before { content:''; display:inline-block; width:1.125em; height:1.125em; background:url('/assets/images/instagram.svg') center center / contain no-repeat; margin-right:0.25em; vertical-align: text-bottom; }
 }
@@ -110,12 +128,15 @@ a { text-decoration:none; color:#a2e52c; }
 
   .shop-item .card-meta { position:static; top:auto; left:auto; right:auto; transform:none; text-align:left; opacity:1; padding:1rem 0 0; }
   .shop-item .card-title { font-size:1.75em; }
+
+  /* Footer */
+  .site-footer { display:flex; justify-content: space-between; }
 }
 
 /* 960w */
 @media screen and (min-width:60rem) {
   /* Intro */
-  .page-intro { font-size:3.75rem; }
+  .page-intro { font-size:3.75rem; margin-top:3.75rem; }
   .page-intro a::after { height:0.5rem; }
 }
 
@@ -136,5 +157,5 @@ a { text-decoration:none; color:#a2e52c; }
 
 /* 1440w */
 @media screen and (min-width:90rem) {
-  .wrapper { padding:3rem; }
+  .wrapper { padding:2rem 3rem; }
 }
